--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.1",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "recharts": "^2.12.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
